change font to match future potential branding

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
 	max-width: 737px;
 	margin-left: auto;
 	margin-right: auto;
-	font-family: "Roboto", sans-serif;
+	font-family: "Outfit", sans-serif;
 	background: none;
 	color: #F5F5F5;
 }
