--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,5 @@
 :root {
-  --md-ref-typeface-plain: 'Outfit';
+  --md-ref-typeface-plain: "Outfit";
   --md-sys-color-primary: #b02f00;
   --md-sys-color-on-primary: #ffffff;
   --md-sys-color-primary-container: #ff7147;
@@ -61,7 +61,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: 'Outfit', sans-serif;
+  font-family: "Outfit", sans-serif;
   color: var(--md-sys-color-on-surface);
 }
 
