--- a/resume/index.css
+++ b/resume/index.css
@@ -1,5 +1,5 @@
 :root {
-  --md-ref-typeface-plain: 'Outfit';
+  --md-ref-typeface-plain: "Outfit";
   --md-sys-color-primary: #b02f00;
   --md-sys-color-on-primary: #ffffff;
   --md-sys-color-primary-container: #ff7147;
