--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -91,9 +91,9 @@ p {
 }
 
 #header {
-  font-size: 5rem;
+  font-size: 7.5em;
   text-align: center;
-  font-weight: 500;
+  font-weight: 700;
   line-height: 1.3;
   color: var(--md-sys-color-on-surface);
   max-width: 90%;
@@ -117,7 +117,7 @@ p {
 /* Styles for phones */
 @media only screen and (max-width: 767px) {
   #header {
-    font-size: 2.25rem;
+    font-size: 3.375em;
     flex-direction: column;
   }
 
@@ -128,7 +128,7 @@ p {
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   #header {
-    font-size: 3rem;
+    font-size: 4.5em;
     flex-direction: column;
   }
 
